--- a/resources_teaching.html
+++ b/resources_teaching.html
@@ -287,7 +287,7 @@ $(document).ready(function () {
 <font size="4"><strong>The Randomizer:</strong><br> <em>A tool to foster participation and reduce instructors’ unconscious biases</em></font>
 </p>
 <p>Part of my teaching philosophy is to foster a learning environment where students actively participate in class. I am particularly interested in strategies that address instructors’ unconscious biases. With that goal in mind, I programmed “The Randomizer,” an R function designed to assist instructors in incentivizing and grading participation. “The Randomizer” randomly selects students to participate, thereby creating the opportunity for students that would otherwise not express their opinions to do so (and to gain confidence in the process). It provides a clear and transparent way to create engagement while eliminating the practical difficulties instructors face in registering participation points. Among the function’s many features, it automatically creates a CSV file with students’ participation and grades throughout the semester. <br/> I thank Professor Guy Whitten for showing me the many ways randomization could be helpful in a classroom setting.</p>
-<p>The Randomizer function and complete documentation is available <a href="https://github.com/andrea-junqueira/TheRandomizer" target="_blank">here.</a></p>
+<p>The Randomizer function and complete documentation are available <a href="https://github.com/andrea-junqueira/TheRandomizer" target="_blank">here.</a></p>
 
 
 
