--- a/research.html
+++ b/research.html
@@ -286,9 +286,9 @@ $(document).ready(function () {
 <p><font size="6"> Publications, Works Under Review and in Progress</font></p>
 <p><font size="3"> Barberia, Lorena, Maria Leticia Claro Oliveira, Andrea Junqueira, Natalia Moreria, and Guy Whitten. 2021. “Should I Stay or Should I Go? Embracing Causal Heterogeneity in the Study of Pandemic Policy and Citizen Behavior.” <em>Social Science Quartely</em>. Available here: <a href="https://onlinelibrary.wiley.com/doi/10.1111/ssqu.13037" class="uri">https://onlinelibrary.wiley.com/doi/10.1111/ssqu.13037</a>.</font></p>
 <p><font size="3"> Junqueira, Andrea, and Patrick Cunha Silva. “Strengthening the Party, Weakening the Women: Unforeseen Consequences of Strengthening Institutions.” <em>Under review</em>. </font></p>
+<p><font size="3"> Junqueira, Andrea, Ali Kagalwala, and Christine Lipsmeyer. “What’s Your Problem? How Issue Ownership and Partisan Discourse Influence Personal Concerns.” <em>Under review</em>. </font></p>
 <p><font size="3"> Junqueira, Andrea. “Por Que Mano Dura? Understanding the politics behind aggressive crime-fighting policies.” <em>In Progress</em>. </font></p>
 <p><font size="3"> Junqueira, Andrea, Ali Kagalwala, Andrew Philips, and Guy Whitten. “Endogenous Pie: Modeling Simultaneity in Dynamic Models of Compositional Outcomes.” <em>In progress</em>. </font></p>
-<p><font size="3"> Junqueira, Andrea, Ali Kagalwala, and Christine Lipsmeyer. “Is someone listening? Ideology and Citizens’ Responses to Parties’ Law and Order Rhetoric.” <em>In progress</em>. </font></p>
 <p><font size="3"> Junqueira, Andrea, Thiago Silva, and Guy Whitten. “What about us? Nativism, Populism, and Electoral Accountability” <em>In progress</em>. </font></p>
 <p><font size="3"> Junqueira, Andrea, Thiago Silva, and Guy Whitten. “Are All Coalition Parties Treated the Same? The Costs of Being a Coalition Member.” <em>In progress</em>. </font></p>
 <p><font size="3"> Cheibub, Andrea Junqueira, and Thiago Moreira. “Who gets represented? Income and Electoral Participation in Brazilian Elections.” <em>In progress</em>. </font></p>
