--- a/resources_teaching.html
+++ b/resources_teaching.html
@@ -11,7 +11,7 @@
 
 
 
-<title>resources_teaching.knit</title>
+<title>Randomizing Students</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
