--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
 
 <title>contact.knit</title>
 
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -46,6 +47,7 @@
 
 
 
+
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
 
@@ -70,6 +72,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -222,7 +227,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -238,13 +243,13 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="dissertation.html">Dissertation</a>
+  <a href="dissertation.html">Book Project</a>
 </li>
 <li>
   <a href="research.html">Research</a>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Teaching
      
     <span class="caret"></span>
@@ -286,10 +291,13 @@ $(document).ready(function () {
 <p><font size="6"> Contact Information</font></p>
 <p><font size="3"> <strong>Address:</strong> </font></p>
 <p>
-Andrea Junqueira<br> Department of Political Science, Texas A&amp;M University<br> 2935 Research Pkwy, LASB 125<br> College Station, TX 77843-4348, United States.
+Andrea Junqueira<br> Weidenbaum Center on the Economy, Government, and
+Public Policy<br> Washington University in St. Louis<br> Seigle Hall,
+Suite 170, Office 173<br> St. Louis-MO 63130-4899, United States.
 </p>
 <p><font size="3"> <strong>Email:</strong> </font></p>
-<p><a href="mailto:andrea_junqueira@tamu.edu" class="email">andrea_junqueira@tamu.edu</a></p>
+<p><a href="mailto:ajunqueira@wustl.edu"
+class="email">ajunqueira@wustl.edu</a></p>
 
 
 
