--- a/dissertation.html
+++ b/dissertation.html
@@ -13,7 +13,8 @@
 
 <title>dissertation.knit</title>
 
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -46,6 +47,7 @@
 
 
 
+
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
 
@@ -70,6 +72,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -222,7 +227,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -238,13 +243,13 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="dissertation.html">Dissertation</a>
+  <a href="dissertation.html">Book Project</a>
 </li>
 <li>
   <a href="research.html">Research</a>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Teaching
      
     <span class="caret"></span>
@@ -288,9 +293,25 @@ $(document).ready(function () {
 <font size="1">FreeImages.com/@urbano2006</font>
 </div>
 <p><br /></p>
-<p><font size="6"> Poverty, Crime, and Demand for Tough-on-Crime Policies</font></p>
+<p><font size="6"> Poverty, Crime, and Demand for Tough-on-Crime
+Policies</font></p>
 <p><font size="3"> Abstract: </font></p>
-<p><font size="3"> My dissertation is a book project on the effects of poverty and income inequality on the incidence of aggressive security policies, popularly known as mano dura. It is uncontroversial that such policies lead to violations of citizens’ rights, particularly among vulnerable populations. How can policies incompatible with democratic values be so pervasive in democracies? While political science literature has emphasized the role of violence in boosting preferences for tough-on-crime policies, I advance a new theory about how economic vulnerability mediates citizens’ political responses to criminal activity. While violence triggers strong political reactions among high-income voters, economic hardship mutes the effect of criminal violence among the poor. I theorize that this process creates incentives for politicians to be more responsive to the preferences of the wealthy when designing security policies. To test my theory, I use a multi-method approach that combines the strengths of different research designs—observational, quasi-experimental, and experimental. </font></p>
+<p><font size="3"> My dissertation is a book project on the effects of
+poverty and income inequality on the incidence of aggressive security
+policies, popularly known as mano dura. It is uncontroversial that such
+policies lead to violations of citizens’ rights, particularly among
+vulnerable populations. How can policies incompatible with democratic
+values be so pervasive in democracies? While political science
+literature has emphasized the role of violence in boosting preferences
+for tough-on-crime policies, I advance a new theory about how economic
+vulnerability mediates citizens’ political responses to criminal
+activity. While violence triggers strong political reactions among
+high-income voters, economic hardship mutes the effect of criminal
+violence among the poor. I theorize that this process creates incentives
+for politicians to be more responsive to the preferences of the wealthy
+when designing security policies. To test my theory, I use a
+multi-method approach that combines the strengths of different research
+designs—observational, quasi-experimental, and experimental. </font></p>
 
 
 
