--- a/contact.html
+++ b/contact.html
@@ -296,8 +296,8 @@ Public Policy<br> Washington University in St. Louis<br> Seigle Hall,
 Suite 170, Office 173<br> St. Louis-MO 63130-4899, United States.
 </p>
 <p><font size="3"> <strong>Email:</strong> </font></p>
-<p><a href="mailto:ajunqueira@wustl.edu"
-class="email">ajunqueira@wustl.edu</a></p>
+<p><a href="mailto:jandrea@wustl.edu"
+class="email">jandrea@wustl.edu</a></p>
 
 
 
