--- a/research.html
+++ b/research.html
@@ -397,10 +397,9 @@ in their electoral campaigns.</p>
 </div>
 <p><br /></p>
 <p><font size="6"> Selected Works in Progress</font></p>
-<p><font size="3"> Junqueira, Andrea. “Socioeconomic Differences in
-Electoral Responses to Crime: How Poverty Reduces Politicians’
-Incentives to Reform Security Policies.” <em>In Progress</em>.
-</font></p>
+<p><font size="3"> Junqueira, Andrea. “The Political Economy of the
+Heavy Hand: How Poverty Reduces Politicians’ Incentives to Reform
+Security Policies.” <em>In Progress</em>. </font></p>
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName5" center>
 Abstract
 </button>
