--- a/research.html
+++ b/research.html
@@ -321,7 +321,7 @@ health outcomes.</p>
 <p><br /></p>
 <p><font size="3"> Junqueira, Andrea, and Patrick Cunha Silva.
 “Strengthening the Party, Weakening the Women: Unforeseen Consequences
-of Strengthening Institutions.” <em>Second round of review, The Journal
+of Strengthening Institutions.” <em>Conditionally Accepted, The Journal
 of Politics</em>. </font></p>
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName2" center>
 Abstract
